fixes scrollbar-width problem in webkit browsers

--- a/src/jquery.fs.scroller-styles.less
+++ b/src/jquery.fs.scroller-styles.less
@@ -42,6 +42,7 @@
 			&::-webkit-resizer {
 				background: transparent;
 				opacity: 0;
+				width: 0;
 			}
 		}
 
